--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@internationalized/date": "^3.6.0",
     "@nextui-org/react": "^2.4.8",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.10",
@@ -16,6 +17,7 @@
     "next": "15.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "resend": "^4.0.1",
     "sonner": "^1.5.0"
   },
   "devDependencies": {
