--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@internationalized/date": "^3.6.0",
     "@nextui-org/react": "^2.4.8",
+    "@nextui-org/use-infinite-scroll": "^2.1.5",
+    "@tanstack/react-query": "^5.61.5",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.10",
     "hugeicons-react": "^0.3.0",
