--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@nextui-org/react": "^2.4.8",
     "@nextui-org/use-infinite-scroll": "^2.1.5",
     "@tanstack/react-query": "^5.61.5",
+    "apexcharts": "^4.1.0",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.10",
     "hugeicons-react": "^0.3.0",
     "next": "15.0.2",
     "react": "^18",
+    "react-apexcharts": "^1.6.0",
     "react-dom": "^18",
     "resend": "^4.0.1",
     "sonner": "^1.5.0"
