--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-apexcharts": "^1.6.0",
     "react-dom": "^18",
     "resend": "^4.0.1",
-    "sonner": "^1.5.0"
+    "sonner": "^1.5.0",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^22",
