--- a/package.json
+++ b/package.json
@@ -1,38 +1,38 @@
 {
-  "name": "crm-frontend-next",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@internationalized/date": "^3.6.0",
-    "@nextui-org/react": "^2.4.8",
-    "@nextui-org/use-infinite-scroll": "^2.1.5",
-    "@tanstack/react-query": "^5.61.5",
-    "apexcharts": "^4.1.0",
-    "axios": "^1.7.7",
-    "framer-motion": "^11.11.10",
-    "hugeicons-react": "^0.3.0",
-    "next": "15.0.2",
-    "react": "^18",
-    "react-apexcharts": "^1.6.0",
-    "react-dom": "^18",
-    "resend": "^4.0.1",
-    "sonner": "^1.5.0",
-    "zustand": "^5.0.1"
-  },
-  "devDependencies": {
-    "@types/node": "^22",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^9",
-    "eslint-config-next": "15.0.2",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5"
-  }
+   "name": "crm-frontend-next",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint"
+   },
+   "dependencies": {
+      "@internationalized/date": "^3.6.0",
+      "@heroui/react": "2.6.14",
+      "@heroui/use-infinite-scroll": "2.2.3",
+      "@tanstack/react-query": "^5.61.5",
+      "apexcharts": "^4.1.0",
+      "axios": "^1.7.7",
+      "framer-motion": "^11.11.10",
+      "hugeicons-react": "^0.3.0",
+      "next": "15.0.2",
+      "react": "^18",
+      "react-apexcharts": "^1.6.0",
+      "react-dom": "^18",
+      "resend": "^4.0.1",
+      "sonner": "^1.5.0",
+      "zustand": "^5.0.1"
+   },
+   "devDependencies": {
+      "@types/node": "^22",
+      "@types/react": "^18",
+      "@types/react-dom": "^18",
+      "eslint": "^9",
+      "eslint-config-next": "15.0.2",
+      "postcss": "^8",
+      "tailwindcss": "^3.4.14",
+      "typescript": "^5"
+   }
 }
