--- a/package.json
+++ b/package.json
@@ -3,34 +3,34 @@
    "version": "0.1.0",
    "private": true,
    "scripts": {
-      "dev": "next dev",
+      "dev": "next dev --turbo",
       "build": "next build",
       "start": "next start",
       "lint": "next lint"
    },
    "dependencies": {
-      "@internationalized/date": "^3.6.0",
       "@heroui/react": "2.6.14",
       "@heroui/use-infinite-scroll": "2.2.3",
-      "@tanstack/react-query": "^5.61.5",
-      "apexcharts": "^4.1.0",
-      "axios": "^1.7.7",
-      "framer-motion": "^11.11.10",
+      "@internationalized/date": "^3.7.0",
+      "@tanstack/react-query": "^5.66.0",
+      "apexcharts": "^4.4.0",
+      "axios": "^1.7.9",
+      "framer-motion": "^12.4.3",
       "hugeicons-react": "^0.3.0",
-      "next": "15.0.2",
-      "react": "^18",
-      "react-apexcharts": "^1.6.0",
-      "react-dom": "^18",
-      "resend": "^4.0.1",
-      "sonner": "^1.5.0",
-      "zustand": "^5.0.1"
+      "next": "^15.1.7",
+      "react": "^19",
+      "react-apexcharts": "^1.7.0",
+      "react-dom": "^19",
+      "resend": "^4.1.2",
+      "sonner": "^1.7.4",
+      "zustand": "^5.0.3"
    },
    "devDependencies": {
       "@types/node": "^22",
-      "@types/react": "^18",
-      "@types/react-dom": "^18",
+      "@types/react": "^19",
+      "@types/react-dom": "^19",
       "eslint": "^9",
-      "eslint-config-next": "15.0.2",
+      "eslint-config-next": "15.1.7",
       "postcss": "^8",
       "tailwindcss": "^3.4.14",
       "typescript": "^5"
